# lmp-reproduced

./: .gitignore  README.md  pyproject.toml
data/pot/: TiB.meam  library.meam
data/results/: final.result  log.lammps
data/struct/: Al.struct  Cu.struct  Mg.struct  SiC.struct  Ti.struct  TiB2.struct  data.struct  in.lammps
docs/: report.md  report_cn.md
reports/: 251212-项目绩效自评价-考核指标_1-1_金属基复合材料界面与缺陷计算模块技术报告-V2.txt  251212-项目绩效自评价-考核指标_1-2_金属基复合材料温度相关物性计算模块技术报告-V2.txt
reports/original/: 251212—项目绩效自评价—考核指标 1-1 金属基复合材料界面与缺陷计算模块技术报告-V2.docx  paper-extracted.docx
scripts/reproduce/: README.md  analyze_ti_tib2.py  cohesive_energy.py  defect_energy.py  long_interface_annealing.py  plot_temperature.py  postprocess_temperature.py  run_interface_calcs.py  show_results.py  temperature_cohesive_energy.py  visualize_interfaces.py  visualize_results.py
src/lmp_reproduced/: __init__.py  models.py  pipelines.py
src/lmp_reproduced/core/: extraction.py  input_generator.py  post_processor.py  potentials.py  structures.py
src/lmp_reproduced/simulations/: runners.py
src/lmp_reproduced/visualization/: charts.py
tests/: test_input_generator.py  test_models.py  test_post_processor.py  test_structures.py
